# AI

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  log.txt  main.cpp
include/: ActivationFunction.h  Batch.h  Conv2DLayer.h  DenseLayer.h  FlattenLayer.h  Identity.h  Instance.h  Layer.h  LayerType.h  LayersList.h  LeakyRelu.h  MaxPoolingLayer.h  NeuralNetwork.h  NeuronLayer.h  NeuronLayersList.h  Relu.h  Sigmoid.h  Softmax.h  Tensor.h  classes.h  neuralNetwork.h  neuronLayer.h
pdf/: AI_Project.tex
src/: Batch.cpp  Conv2DLayer.cpp  DenseLayer.cpp  FlattenLayer.cpp  Identity.cpp  Instance.cpp  Layer.cpp  LayersList.cpp  LeakyRelu.cpp  MaxPoolingLayer.cpp  NeuralNetwork.cpp  NeuronLayer.cpp  NeuronLayersList.cpp  Relu.cpp  Sigmoid.cpp  Softmax.cpp  Tensor.cpp  classes.cpp  main.cpp  neuralNetwork.cpp  neuronLayer.cpp
